--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
     "prisma": "^7.0.1"
+  },
+
+  "scripts": {
+    "dev": "bun run src/server.ts",
+    "start": "bun run src/server.ts"
   }
 }
