--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "elysia": "^1.4.16",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "mongoose": "^9.0.0",
     "morgan": "^1.10.1",
     "prisma": "^7.0.1"
   },
-
   "scripts": {
     "dev": "bun run src/server.ts",
     "start": "bun run src/server.ts"
